Cherry-pick bd33a8e97f27. rdar://118496293

Incorrect wheel event behavior with Shadow DOM
    https://bugs.webkit.org/show_bug.cgi?id=264469
    rdar://118496293

    Reviewed by Ryosuke Niwa and Chris Dumez.

    `findEnclosingScrollableContainer()` needs to use `parentInComposedTree()` to find the enclosing
    ScrollableArea for the overflow scroll.

    * LayoutTests/fast/scrolling/mac/wheel-event-in-overflow-with-shadow-dom-expected.txt: Added.
    * LayoutTests/fast/scrolling/mac/wheel-event-in-overflow-with-shadow-dom.html: Added.
    * Source/WebCore/page/mac/EventHandlerMac.mm:
    (WebCore::findEnclosingScrollableContainer):

    Canonical link: https://commits.webkit.org/273181@main

Canonical link: https://commits.webkit.org/272448.295@safari-7618-branch